21/07/2011 Changes

Moves primitives inline - might make Object class really big but stack traces are shorter.
Intoduced Redline runtime exception to wrap non-runtime exceptions.


20/07/2011 Changes

Added first of new primitives - primitiveVariableAt - which will look for the referenced 
variable and then when not found will call primitiveResolveObject - which may load a new
class from source.


19/07/2011 Changes

Added ClassBytecodeWriter - used to be a single generator but cleaner if I separate.
Class being written and executed without problem.
Removed source paths from sources found in source path. 
Changing Object resolution support - moved into primitive - will support name spaces this way.


17/07/2011 Changes

Added a preprocessor to process the method definitions starting with "+" and "-".
It is expected this preprocessor will be extended over time to turn many things into
message sends the backend compiler will handle.


03/07/2011 Changes

Added runtime probe of instance, class, class instance and pool variables.


02/07/2011 Changes

Clean up how output is done - using print writers defined in environment.
Added default 'src/main/smalltalk' as path for sources.
Thinking about adding 'src/test/smalltalk'


30/06/2011 Changes

Replaced the command line processing so you can turn verbose on to get more information about
what Redline is doing. Removed console output - will replace with log output.


25/06/2011 Changes

Refactored grammer to remove backtracing - no backtracking at all making grammar very fast.
Changed compilation model for methods to trigger a send to a class to compile the method
from source - more smalltalk like - using message sends.
Introduced a preprocessor to enable parsing of +/- decorators on method to define a class + or 
instance - method. Preprocessor turns these into messages to compile methods with source. 
This version of the Compiler is much neater, simpler, faster and dynamic.


26/03/2011 Changes
