@@ -1,0 +1,11 @@
+"im a comment"
+
+- yourself
+	^self.
+
++ * value
+  self times: value
+
+- at: key put: value
+  self dict at: key put: value.
+
